# pw_template

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  banner.txt  bootstrap.sh  pigweed.json
build_overrides/: pi_pico.gni  pigweed.gni
infra/config/: recipes_version.txt
src/: BUILD.gn  main.cc  pico.cc
src/pw_board_led_stm32f429i_disc1/: BUILD.gn  led.cc
src/pw_spin_delay/: BUILD.gn
src/pw_spin_delay/public/pw_spin_delay/: delay.h
src/pw_spin_delay_stm32f429i_disc1/: BUILD.gn  delay.cc
targets/: common_backends.gni
targets/stm32f429i_disc1/: target_toolchains.gni
tools/: BUILD.gn  setup.cfg  setup.py
tools/project_tools/: find_files.py  presubmit_checks.py
tools/sample_project_tools/: presubmit_checks.py
