# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")
import("$dir_pw_build/python.gni")
import("$dir_pw_build/python_dist.gni")

##############
# Applications
##############

group("default") {
  deps = [
    ":python.lint",
    ":python.tests",
    ":app",
  ]
}

group("app") {
  deps = [
    "//src:app($dir_pigweed/targets/rp2040_pw_system:rp2040_pw_system.debug)",
    "//src:app($dir_pigweed/targets/host_device_simulator:host_device_simulator.debug)",
  ]
}

###################
# Python tooling
###################

pw_python_group("python") {
  python_deps = [
    "$dir_pw_env_setup:python",
    ":install_tools",
  ]
}

pw_python_pip_install("install_tools") {
  packages = [
    "//tools:tools",
  ]
  editable = true
}
