# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_log_tokenized/backend.gni")

# Inherit from a Pigweed upstream toolchain and override backends as needed.
toolchain_overrides = {
  # Configure backend for assert facade.
  pw_assert_BACKEND = dir_pw_assert_basic

  # Configure the pw_log facade for Base64 tokenized logging.
  pw_log_BACKEND = dir_pw_log_tokenized
  pw_log_tokenized_HANDLER_BACKEND = "$dir_pw_log_tokenized:base64_over_hdlc"

  # Alternately, configure pw_log for plain text logging
  # pw_log_BACKEND = dir_pw_log_basic

  pw_build_LINK_DEPS = [
    "$dir_pw_assert:impl",
    "$dir_pw_log:impl",
  ]
}
